<resources>
    <string name="app_name">Team Score</string>
    <string name="Title">Team Score</string>
    <string name="gameStart">Start</string>
    <string name="query">Query</string>
    <string name="group">Please Enter the Jursey Numbers and Names</string>
    <string name="teamEnter">Please Enter Team names</string>
    <string name="point2_in">2pt made</string>
    <string name="point2_out">2pt miss</string>
    <string name="point3_in">3pt made</string>
    <string name="point3_out">3pt miss</string>
    <string name="FT_in">FT made</string>
    <string name="FT_out">FT miss</string>
    <string name="point2_inn">2pt made</string>
    <string name="point2_outn">2pt miss</string>
    <string name="point3_inn">3pt made</string>
    <string name="point3_outn">3pt miss</string>
    <string name="FT_inn">FT made</string>
    <string name="FT_outn">FT miss</string>
    <string name="foul">Foul</string>
    <string name="AS">AS</string>
    <string name="BS">BS</string>
    <string name="TO">TO</string>
    <string name="ST">ST</string>
    <string name="OR">OR</string>
    <string name="DR">DR</string>
    <string name="ORn">OR</string>
    <string name="DRn">DR</string>
    <string name="change">change player</string>
    <string name="Opponent">opponent</string>
    <string name="NextSection">Next Section</string>
    <string name="start">start</string>
    <string name="Number">Number</string>
    <string name="already_foul">has already foul</string>
    <string name="foul_out">foul out!!!</string>
    <string name="change_other">You have to change another.</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_question">Do you want to cancel the previous step?</string>
    <string name="one_step1">You can only</string>
    <string name="one_step2">cancel one step</string>
    <string name="alreadycancel1">" You have canceled"</string>
    <string name="alreadycancel2">the previous step</string>
    <string name="choose1">You have to</string>
    <string name="choose2">choose five players</string>
    <string name="change1">You have changed</string>
    <string name="change2">your player list</string>
    <string name="player_list">at least 5   ,  Up to 12</string>
    <string name="starting_lineup">Please choose starting lineup</string>
    <string name="choose">Please choose five Players</string>
    <string name="section4">"section 4 "</string>
    <string name="section3">section 3</string>
    <string name="section2">section 2</string>
    <string name="choosePlayer2">the players!!!</string>
    <string name="choosePlayer1">Please choose</string>
    <string name="pleaseConfirm">Please Confirm</string>
    <string name="all">All</string>
    <string name="home">Home</string>
    <string name="guest">Guest</string>
    <string name="lastFive">Please enter at least five</string>
    <string name="nodata">No data</string>
    <string name="section">Section</string>
    <string name="number">Number</string>
    <string name="confirm">Confrim</string>
    <string name="noResult">No game results yet!</string>
    <string name="saveConfrim">Please confirm whether to save the game?</string>
    <string name="delConfrim">Please confirm whether to delete the game?</string>
    <string name="dataDelete">Record Deleted</string>
    <string name="ft">FT</string>
    <string name="point2">2Point</string>
    <string name="point3">3Point</string>
    <string name="goal">goal</string>
    <string name="miss">miss</string>
    <string name="score">PTS</string>
    <string name="rebound">Rebounds</string>
    <string name="oror">OR</string>
    <string name="drdr">DR</string>
    <string name="data1">Players</string>
    <string name="data2">Sections</string>
    <string name="data3">Detail</string>
    <string name="total">Total</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_data">DataActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
